Rollup_Config/Rollup_Config/force-app/main/default/objects/Rollup_Rule__c/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>