Rollup_Config/Rollup_Config/force-app/main/default/objects/Rollup_Rule__c/fields/Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field__c</fullName>
    <label>Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>