Rollup_Config/Rollup_Config/force-app/main/default/objects/Rollup_Rule__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Realtime</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>