Rollup_Config/Rollup_Config/force-app/main/default/objects/Rollup_Rule__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
            <value>
                <fullName>Avg</fullName>
            </value>
            <value>
                <fullName>Concat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>